Bug 530090 - Memory leaks in jArray in HTML5 parser. r=hsivonen.